# weather-provider-rs

./: .gitignore  Cargo.toml  Dockerfile  README.md  weather-provider.service
.cargo/: config.toml
.github/workflows/: docker-publish.yml
src/: main.rs
