[package]
name = "weather-provider"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
rumqttc = "0.22"
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"